--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-bundled-entry",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -35,12 +35,12 @@
     "@types/node": "^16.11.11",
     "tsup": "^5.7.1",
     "typescript": "^4.4.4",
-    "vite": "^2.0.2"
+    "vite": "~2.7.0"
   },
   "dependencies": {
     "esbuild": "^0.14.10"
   },
   "peerDependencies": {
-    "vite": "^2.0.2"
+    "vite": "~2.7.0"
   }
 }
